	Remove deprecated keyPress property from commands.
	Fixed bug with button states not being updated when called via shortcuts.
		- Thanks to @echteinfachtv for reporting.
	Added Lithuanian translation.
		- Thanks to @q2apro for translating.
	Fixed bug causing newlines to not always be added when return is pressed
		at the end of quotes and code blocks.
		- Thanks to @barbuslex for reporting.

Version 1.4.5:
	Added command shortcuts to tooltips.
		- Thanks to @brunoais
	Added Portuguese translation.
		- Thanks to @brunoais
	Added list indent and outdent commands.
		- Thanks to @brunoais
	Added Ukrainian translation.
		Thanks to @aqrln for translating
	Fixed bug with BBCode source editor creating links with [img] tags selected.
		- Thanks to @liamdawe for reporting.
	Fixed issue with insert() and FF.
		- Thanks to @martec for reporting.
	Fixed in IE8 and below with XHTML font size attribute conversion.
	Fixed typo in German translation.
		- Thanks to Ulf for reporting.
	Removed build.sh as grunt now does everything build.sh could.
	Added Italian translation.
		- Thanks to Tropico for translating.
	Fixed bug when insert empty node.
		- Thanks to @spuds for reporting.
	Fixed FF bug with dropdowns not opening via shortcuts.
		- Thanks to @echteinfachtv for reporting.
	Improved inserting so only scrolls if the end of the inserted HTML isn't in view.
	Added zh-TW translation.
		- Thanks to @gan068 for translating.
	Updated Polish translation.
		- Thanks to @gnysek for updating.
	Fix possible XSS if editing loading BBCode that someone else has written.
		- Thanks to for Sergiu reporting.
	Fixed default font size.
		- Thanks to @jetand for fixing.
	Added Japanese translation.
		- Thanks to @PyYoshi for translating.
	Fixed bug with XHTML plugin stripping iframes.
		- Thanks to @tim-se for reporting.
	Fixed bug with IE11 newline handling.

Version 1.4.4:
	Fixed height auto expanding when resized.
		- Thanks to @TimWardC3 for reporting